# brave-core

./: .gitignore  DEPS  Jenkinsfile  package.json
app/: BUILD.gn  brave_generated_resources.grd
browser/: BUILD.gn  brave_content_browser_client.cc  brave_content_browser_client.h
common/: webui_url_constants.cc  webui_url_constants.h
components/brave_rewards/utility/: BUILD.gn  ledger_impl.cc  ledger_impl.h  ledger_manifest.json  ledger_service.cc  ledger_service.h  mojo_ledger_client.cc  mojo_ledger_client.h
patches/: chrome-app-BUILD.gn.patch  chrome-browser-chrome_content_browser_manifest_overlay.json.patch  chrome-browser-chrome_content_utility_manifest_overlay.json.patch  chrome-browser-resources-settings-clear_browsing_data_dialog-clear_browsing_data_dialog.html.patch  chrome-browser-resources-settings-clear_browsing_data_dialog-clear_browsing_data_dialog.js.patch  chrome-browser-ui-browser.cc.patch  chrome-browser-ui-views-location_bar-location_bar_view.h.patch  chrome-browser-ui-webui-version_ui.cc.patch  chrome-installer-linux-debian-build.sh.patch  chrome-installer-linux-debian-postinst.patch  chrome-installer-linux-rpm-build.sh.patch  chrome-installer-linux-rpm-chrome.spec.template.patch  components-version_ui-resources-about_version.html.patch  components-version_ui-version_ui_constants.cc.patch  components-version_ui-version_ui_constants.h.patch  content-browser-browser_url_handler_impl.cc.patch  content-browser-code_cache-generated_code_cache.cc.patch  content-browser-download-download_manager_impl.cc.patch  content-browser-site_instance_impl.cc.patch  (+10 more)
(+95 files in other folders)
