import("//services/service_manager/public/service_manifest.gni")

source_set("ledger") {
  sources = [
    "ledger_service.cc",
    "ledger_service.h",
    "ledger_impl.cc",
    "ledger_impl.h",
    "mojo_ledger_client.cc",
    "mojo_ledger_client.h",
  ]

  deps = [
    "//brave/components/brave_rewards/common:rewards_mojom_bindings",
    "//brave/vendor/bat-native-ledger",
  ]
}

service_manifest("ledger_manifest") {
  name = "ledger"
  source = "ledger_manifest.json"
}
